# parody

./: .rustfmt.toml  Cargo.toml  README.md
src/: cache_middleware.rs  error.rs  forward_middleware.rs  lib.rs  main.rs  request.rs  response.rs
src/cache_middleware/: mod.rs  test.rs
src/cache_middleware/test_files/localhost/: GET.body
src/forward_middleware/: .#mod.rs  mod.rs  test.rs
src/storage/: config.rs  error.rs  mod.rs  test.rs
src/storage/test_files/example.com/failures/missing-status/: GET.headers.yaml
src/storage/test_files/example.com/status200/:PARODY-QUERY/: GET.headers.yaml
