[package]
name = "parody"
version = "0.1.0"
authors = ["Renat Galimov <renat2017@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempfile = "*"

[dependencies]
clap = "*"
env_logger = "*"
http = "*"
hyper = "*"
iron = "*"
log = "*"
percent-encoding = "*"
persistent = "*"
plugin = "*"
regex = "*"
reqwest = "*"
router = "*"
serde_json = "*"
serde_yaml = "*"
url = "^1.7"

[[bin]]
name = "parody-server"
version = "0.1.0"
path = "src/main.rs"
